k8s/overlays/dev/cba-was-renewal-email-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cba-was-renewal-email-worker
  labels:
    app: cba-was-renewal-email-worker
    component: worker
    worker: email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cba-was-renewal-email-worker
  template:
    metadata:
      labels:
        app: cba-was-renewal-email-worker
        component: worker
        worker: email
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: email-worker
          image: ap-chuncheon-1.ocir.io/axdhp42jvukm/cba_was_renew:latest_dev
          imagePullPolicy: Always
          command: ["node"]
          args: ["dist/apps/email-worker/src/main.js"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
