k8s/overlays/dev/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cba-was-renew-nodeport
  labels:
    app: cba-was-renew
spec:
  type: NodePort
  selector:
    app: cba-was-renew
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30001
