k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cba-dev-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.recba.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cba-was-renewal
                port:
                  number: 3000
    - host: admin.dev.recba.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cba-management
                port:
                  number: 80
